--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,13 @@
     --color-button-primary: #2196f3;
     --color-button-secondary: #f5f4fa;
     --color-contact: rgba(255,255,255,0.6);
+    --transition-duration: 250ms;
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
 body {
         background-color: var(--bg-color-white);
-        font-family: Roboto, sans-serif;         
+        font-family: Roboto, sans-serif;   
+        /* overflow: hidden;       */
     }
 
 h1,
@@ -41,6 +44,8 @@ p {
 
 .link {
     text-decoration: none;
+    transition: color var(--transition-duration) var(--timing-function), border-color var(--transition-duration) var(--timing-function);
+    /* transition: ; */
 }
 
 .list {
@@ -106,11 +111,37 @@ p {
 .site-nav .link.current {
     color: var(--color-text-focus);
 }
+.current {
+    position: relative;
+}
+.current::after {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+  background-color: var(--color-text-focus);  
+  top: 45px;
+} 
 
 .site-nav .link:hover,
 .site-nav .link:focus {
     color: var(--color-text-focus);   
-            }
+}
+.site-nav .link {
+    position: relative;
+}
+.container-nav .link:hover::after {
+    position: absolute;
+        display: block;
+        content: "";
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--color-text-focus);
+        top: 45px;
+}
     /* Contact */
 .contact {
     display: flex;
@@ -176,6 +207,8 @@ fill: currentColor;
     align-items: center;
     border: 0px;
     justify-content: center;
+    cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
 
 }
@@ -228,6 +261,7 @@ padding: 0 0 94px;
     gap: 30px;
 }
 .section-title{
+    position: relative;
     color: var(--primary-text-color);
     font-weight: 700;
     font-size: 36px;
@@ -235,6 +269,29 @@ padding: 0 0 94px;
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 50px;
+}
+.whatwedo-list {
+    position: relative;
+}
+.whatwedo-box {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+    align-items: center;
+    justify-content: center;
+    bottom: 4px;
+
+}
+.whatwedo-text {
+    color: var(--primary-text-color);
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--color-text-white);
 }
 
 /* Наша команда */
@@ -291,6 +348,7 @@ padding: 0 0 94px;
     justify-content: center;
     align-items: center;
     color: var(--bg-color-icon);
+    transition: color var(--transition-duration) var(--timing-function), background-color var(--transition-duration) var(--timing-function);
 }
 .soc-icon {
     fill: currentColor;
@@ -408,6 +466,7 @@ margin-bottom: 9px;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.1);
     color: var(--color-text-white);
+    transition: background-color var(--transition-duration) var(--timing-function);
 }
 
 .soc-icon-footer {
@@ -444,6 +503,7 @@ margin-bottom: 9px;
     border: 0;
     padding: 6px 22px;
     cursor: pointer;
+    transition: color var(--transition-duration) var(--timing-function), background-color var(--transition-duration) var(--timing-function), box-shadow var(--transition-duration) var(--timing-function);
 }
 .button:hover,
 .button:focus {
@@ -460,6 +520,34 @@ margin-bottom: 9px;
 }
 .image {
     display: block;
+    
+}
+.portfolio-thumb {
+    position: relative;
+
+}
+.text-thumb {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    text-align: left;
+    align-items: center;
+    transform: translateY(0);
+    opacity: 0;
+    
+    letter-spacing: 0.03em;
+    color: var(--color-text-white);
+    background-color: rgba(33, 150, 243, 0.9);
+    padding-left: 24px;
+    padding-right: 24px;
+    overflow: hidden;
+
 }
 .portfolio-title {
 padding: 20px 24px;
@@ -484,8 +572,70 @@ border-right: 1px solid #EEEEEE;
 .portfolio-card {
     flex-basis: calc((100%-60px)/3);
     max-width: 370px;
+    transition: box-shadow var(--transition-duration) var(--timing-function), opacity var(--transition-duration) var(--timing-function), translateY var(--transition-duration) var(--timing-function);
 }
 .portfolio-card:hover {   
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    
+   
+}
+.portfolio-card:hover .text-thumb{
+ transform: translateY(-100%);
+ opacity: 1;
+}
+/* Modal */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: opacity var(--transition-duration) var(--timing-function), visibility var(--transition-duration) var(--timing-function), scale var(--transition-duration) var(--timing-function);
+}
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    scale: 0;
+}
+
+/* body.is-hidden{
+    overflow:auto;
+} */
+
+.modal {
+    position: absolute;
+    width: 528px;
+    height: 581px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--bg-color-white);
+    padding: 8px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+/* .close-button-container { */
+    .close-button {
+    position: absolute;
+    content: "";    
+    width: 30px;
+    height: 30px;
+    right:  8px;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    /* align-items: center;
+    justify-content: center; */
+    /* padding: 0;
+    margin-left: auto; */ 
+}
+.close-button-icon {
+    display: block;
+    margin: 7px 3px;
+    fill: #000;
+    /* width: 11px;
+    height: 11px;  */
 }
