--- a/css/styles.css
+++ b/css/styles.css
@@ -524,29 +524,35 @@ margin-bottom: 9px;
 }
 .portfolio-thumb {
     position: relative;
+    overflow: hidden;
 
 }
-.text-thumb {
+.overlay-box {
     position: absolute;
+    content: "";
     display: flex;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 2;
+    align-items: center;
+    transform: translateY(0);
+        opacity: 0;
+    background-color: rgba(33, 150, 243, 0.9);
+    transition: transform var(--transition-duration) var(--timing-function), opacity var(--transition-duration) var(--timing-function) ;
+}
+.text-thumb {
+    
     font-family: Roboto, sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
-    text-align: left;
-    align-items: center;
-    transform: translateY(0);
-    opacity: 0;
-    
+    text-align: left;    
     letter-spacing: 0.03em;
     color: var(--color-text-white);
-    background-color: rgba(33, 150, 243, 0.9);
+    
     padding-left: 24px;
     padding-right: 24px;
-    overflow: hidden;
+    
 
 }
 .portfolio-title {
@@ -572,13 +578,14 @@ border-right: 1px solid #EEEEEE;
 .portfolio-card {
     flex-basis: calc((100%-60px)/3);
     max-width: 370px;
-    transition: box-shadow var(--transition-duration) var(--timing-function), opacity var(--transition-duration) var(--timing-function), translateY var(--transition-duration) var(--timing-function);
+    transition: box-shadow var(--transition-duration) var(--timing-function);
+    
 }
 .portfolio-card:hover {   
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
    
 }
-.portfolio-card:hover .text-thumb{
+.portfolio-card:hover .overlay-box {
  transform: translateY(-100%);
  opacity: 1;
 }
